--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<div id="text">
-		<h1>Welcome to the world of web development </h1>
+		<p>Welcome to the world of web development </p>
 	</div>
 
     <script type="text/javascript" src="./script.js">
