--- a/main.html
+++ b/main.html
@@ -8,8 +8,8 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<div id="text">
-		<p>Welcome to the world of Web development </p>
+	<div class="text">
+		<p id="text">Welcome to the world of Web development </p>
 	</div>
 
     <script type="text/javascript" src="./script.js">
