--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<div class="text">
+	<div >
 		<p id="text">Welcome to the world of Web development </p>
 	</div>
 
